# organizational-knowledge-repository

./: .gitignore  CLAUDE.md
.github/workflows/: ci.yml  eval-gate.yml
backend/: pyproject.toml  test_minimax.py
backend/app/: .env.example  config.py  main.py
backend/app/api/: auth.py  chat.py  docs.py  eval.py
backend/app/llm_gateway/: base.py  claude_provider.py  deepseek_provider.py  router.py
backend/app/models/: document.py
backend/app/rag/: models.py  pipeline.py
backend/app/rag/chunking/: splitter.py
backend/app/rag/embedding/: embedder.py
backend/app/rag/generation/: generator.py
backend/app/rag/rerank/: reranker.py
backend/app/rag/retrieval/: vector_store.py
backend/app/services/: chat_service.py
discuss/: background-context.md  project-planning.md
docs/: api-spec.md  architecture.md  qa-guide.md
evaluation/: conftest.py
evaluation/configs/: eval_config.yaml
evaluation/datasets/: adversarial.json  golden_qa.json
evaluation/test_suites/api_tests/: conftest.py  test_chat_api.py
frontend/: package-lock.json  package.json
infra/: docker-compose.dev.yml  docker-compose.yml
infra/nginx/: nginx.conf
knowledge_base/fulfillment/: return-refund-policy.md
knowledge_base/procurement/: supplier-admission-standards.md
knowledge_base/quality_control/: inspection-standards.md
knowledge_base/supplier_management/: performance-evaluation.md
knowledge_base/warehouse/: inbound-outbound-sop.md
test-reports/: backend_coverage.json  backend_junit.xml  evaluation_junit.xml  frontend_junit.xml  iteration-1-test-report.md
(+13 files in other folders)
